objects/IntegrationSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for endpoints, timeouts etc</description>
    <fields>
        <fullName>Certificate_Name__c</fullName>
        <label>Certificate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Password__c</fullName>
        <label>Certificate Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client_Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_id__c</fullName>
        <description>Used for OAuth</description>
        <label>Client_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPointURL__c</fullName>
        <label>End Point URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_On_OFF__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Webservice Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <label>Grant Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HelperClassName__c</fullName>
        <label>Helper Class Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutputClass__c</fullName>
        <label>OutputClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestHeader__c</fullName>
        <label>RequestHeader</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Same_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceMethodName__c</fullName>
        <label>Service Method Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebserviceFutureLogs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if the future callout is made</description>
        <label>WebserviceFutureLogs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WebserviceRestLogs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To select when a Rest callout is made to the webservice.</description>
        <label>WebserviceRestLogs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>timeOut__c</fullName>
        <label>timeOut</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>IntegrationSettings</label>
</CustomObject>